Finished Tutorial-21-Navbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 body {
-  background-color: #EEEEEE;
+  /* background-color: #EEEEEE; */
 }
 
 .App {
-  padding: 4rem;
+  /* padding: 4rem; */
 
 }
 
